--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -44,6 +44,35 @@ ul {
 }
 
 .item {
-    width: 18.75%;
-    margin: 0 0.5rem;
+    /* width: 18.75%; chia 5 */
+    width: 22.825%;
+    margin: 0.5rem;
+}
+
+.item {
+    background-color: white;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    user-select: none;
+    padding-bottom: 10px;
+}
+
+.item:hover {
+    position: relative;
+    top: -4px;
+    outline: var(--primary-color) 1px solid;
+}
+
+.btn {
+    border: none;
+    background-color: var(--primary-color);
+    padding: 8px 12px;
+    border-radius: 3px;
+    margin-left: 4px;
+    color: #fafafa;
+}
+
+.btn:hover {
+    background-color: #11ca6b;
+    cursor: pointer;
 }
