--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin: 60px auto 0;
+    flex-wrap: wrap;
 }
 
 .best-sellers .item:first-child h2 {
@@ -41,21 +42,6 @@
     outline: none;
 }
 
-.item {
-    background-color: white;
-    margin-top: 10px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    user-select: none;
-    padding-bottom: 10px;
-}
-
-.item:hover {
-    position: relative;
-    top: -4px;
-    outline: var(--primary-color) 1px solid;
-}
-
 .item-img {
     /* Tỷ lệ tương đối với thẻ chứa nó padding: 100% 
     hiểu là bằng chiều ngang của thẻ chứa nó */
@@ -78,13 +64,43 @@
     -webkit-line-clamp: 2;
 }
 
+.item-btn-wrap {
+    margin-top: 12px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btn-add-cart {
+    display: flex;
+    align-items: center;
+    margin-right: 12px;
+}
+
+.btn-add-cart i {
+    font-size: 13px;
+    margin-right: 12px;
+}
+
 .item-price {
     font-size: 16px;
     color: var(--primary-color);
     margin-left: 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
+    .item {
+        width: 31.5%;
+        margin: 0 0.4rem 0.7rem;
+    }
+
+    .item:last-child {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 860px) {
 
     .best-sellers {
         flex-wrap: wrap;
@@ -153,7 +169,7 @@
     font-weight: 600;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 860px) {
     .policy {
         margin-top: 2.5em;
         flex-wrap: wrap;
