--- a/asset/css/auth_form.css
+++ b/asset/css/auth_form.css
@@ -6,7 +6,8 @@
     height: 100%;
 }
 
-.sign-up {
+.auth {
+    display: block;
     background-color: white;
     border-radius: 4px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -15,18 +16,29 @@
     overflow: hidden;
 }
 
-.sign-up__header {
-    background-color: #ecf0f1;
+.auth__header {
     padding: 20px 40px;
     border-bottom: 1px solid #f0f0f0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.sign-up__header h2 {
+.auth__header h2 {
     margin: 0;
+    font-size: 1.8rem;
+    font-weight: 400;
+    color: #696969;
 }
 
-.sign-up__form {
-    padding: 30px 40px;
+.switch-btn {
+    color: var(--primary-color);
+    cursor: pointer;
+    user-select: none;
+}
+
+.auth__form {
+    padding: 15px 40px 30px;
 }
 
 .form-control {
@@ -41,7 +53,7 @@
 }
 
 .form-control input {
-    border: 2px solid #f0f0f0;
+    border: 1px solid #f0f0f0;
     border-radius: 4px;
     display: block;
     font-size: 14px;
@@ -72,16 +84,25 @@
     left: 0;
 }
 
-#btnOK {
+.auth_btn {
     cursor: pointer;
-    background-color: #34495e;
+    background-color: var(--primary-color);
     border: none;
     color: white;
     display: block;
     padding: 10px;
     width: 100%;
     font-size: 16px;
-    border-radius: 4px;
+    border-radius: 3px;
+    outline: none;
+}
+
+.auth_btn:hover {
+    background-color: #2abb66;
+}
+
+.auth:nth-child(2) {
+    display: none;
 }
 
 
