chỉnh sửa hiển thị sản phẩm trang chủ, lưu thông tin đăng nhập vào sessionStorage

--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -44,9 +44,8 @@ ul {
 }
 
 .item {
-    /* width: 18.75%; chia 5 */
-    width: 22.825%;
-    margin: 0.5rem;
+    width: 22.5%;
+    margin: 1.25%;
 }
 
 .item {
