--- a/asset/css/dsSanpham.css
+++ b/asset/css/dsSanpham.css
@@ -1,46 +1,3 @@
-.best-sellers {
-    display: flex;
-    margin: 40px auto 0;
-    flex-wrap: wrap;
-}
-
-.best-sellers .item:first-child h2 {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 19px;
-    word-spacing: 4px;
-    color: #333;
-    padding-bottom: 5px;
-}
-
-.best-sellers .item:first-child small {
-    display: block;
-    font-style: italic;
-    font-size: 14px;
-    font-family: serif;
-    color: var(--primary-color);
-    font-weight: 600;
-}
-
-.best-sellers .item:first-child p {
-    font-size: 12px;
-    color: #6e6e6e;
-    font-weight: 600;
-    line-height: 14px;
-    padding-top: 14px;
-}
-
-.best-sellers .item:first-child {
-    cursor: default;
-    padding: 10px;
-    box-shadow: none;
-}
-
-.best-sellers .item:first-child:hover {
-    top: 0;
-    outline: none;
-}
-
 .item-img {
     /* Tỷ lệ tương đối với thẻ chứa nó padding: 100% 
     hiểu là bằng chiều ngang của thẻ chứa nó */
@@ -87,44 +44,9 @@
     margin-left: 10px;
 }
 
-/* Thanh policy */
-.policy {
-    display: flex;
-    width: 100%;
-    background: #f5f6f9;
-    height: 125px;
-    margin-top: 60px;
-}
-
-.policy-label {
-    text-align: center;
-    padding-top: 30px;
-    border-right: 1px solid #fff;
-    flex-grow: 1;
-}
-
-.policy-label i {
-    font-size: 32px;
-    color: var(--primary-color);
-    margin-bottom: 12px;
-}
-
-.policy-label span {
-    display: block;
-    text-transform: uppercase;
-    font-size: 0.9rem;
-    font-weight: bold;
-    letter-spacing: 0.5px;
-}
-
-.policy-label small {
-    font-size: 11px;
-    color: #888888;
-    font-weight: 600;
-}
 
 /* Featured products */
-.feature-product .heading {
+.feature-dsSanpham .heading {
     margin: 50px auto;
     text-align: center;
 }
@@ -145,7 +67,7 @@
     font-weight: 600;
 }
 
-.content-product {
+.content-dsSanpham {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -208,53 +130,11 @@
 
 @media screen and (max-width: 860px) {
 
-    .best-sellers {
-        flex-wrap: wrap;
-        margin: 2.5em auto 0;
-        width: 100%;
-    }
-
-    .best-sellers .item:first-child {
-        width: 100%;
-        text-align: center;
-        padding: 0 2rem;
-        margin: 0 auto 1.5rem auto;
-    }
-
-    .best-sellers .item:first-child h2 {
-        font-size: 21px;
-        padding-bottom: 10px;
-        letter-spacing: 2px;
-    }
-
-    .best-sellers .item:first-child p {
-        padding-top: 0.6rem;
-    }
-
     .item {
         width: 48%;
         margin: 0 1% 12px;
     }
 
-    .policy {
-        margin-top: 2.5em;
-        flex-wrap: wrap;
-        min-height: 300px;
-    }
-
-    .policy-label {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 50%;
-        padding: 25px;
-        border-bottom: 1px solid #fff;
-    }
-
-    .policy-label small {
-        margin-top: 0.3rem;
-    }
 }
 
 
@@ -273,6 +153,3 @@
         justify-content: center;
     }
 }
-
-
-
