--- a/asset/css/sanpham.css
+++ b/asset/css/sanpham.css
@@ -9,13 +9,15 @@
 }
 
 .item-img {
-    
+    text-align: center;
+    flex: 1;
 }
 
 .item-img img {
     margin: 32px;
-    width: 500px;
+    width: 300px;
     border: 1px solid black;
+    border-radius: 2px;
 }
 
 .item-desc {
@@ -75,4 +77,26 @@
     background-color: #f5f5f5;
     width: 80%;
     border-radius: 5px;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .btn.btn-buy, .btn.btn-add {
+        padding: 10px 20px;
+        font-size: 14px;
+        flex: 1;
+        text-transform: uppercase;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .item-wrap {
+        display: block;
+    }
+    .item-img img {
+        margin: 32px;
+        width: 80%;
+        border: 1px solid black;
+        border-radius: 2px;
+    }
 }
